--- a/index.css
+++ b/index.css
@@ -1,5 +1,49 @@
 
 
+   @media (orientation:portrait) {
+    aside{
+            display:none;
+            width:300px;
+            height:2000px;
+            background-color: lightgrey;
+            position:fixed;
+            top:0px;
+            
+
+        
+        }
+        .division{
+            height:100px;
+            width:100px;
+        }
+
+        #italic{
+
+            position:fixed;
+            margin:10px;
+            top:0px;
+            height:80px;
+            width:80px;
+            border-radius: 50%;
+            background-color: rgb(138, 145, 155);
+            display:flex;
+            justify-content: center;
+            align-items: center;
+            font-size:50px; 
+            color:rgba(235, 247, 10, 0.7);
+        }
+       .division:active + aside{
+            display:list-item;
+
+        }
+        .profile1{
+            margin-top:100px;
+            padding-top:0px;
+
+
+        }
+    
+   
    /* header css */
 header{
  position:fixed;
@@ -12,7 +56,10 @@ header{
  font-family:Verdana, Geneva, Tahoma, sans-serif;
  padding-top:0px;
  margin-top:0px;
- height:120px;
+ height:150px;
+ margin-right:0px;
+ padding-right:0px;
+ 
 }
 .navbar h1{
     margin-left:40%;
@@ -67,39 +114,36 @@ a {
 /* home css code
 image radius height width designing,flexing,button,hovering,smoooth,animation */
 .homea1 {
- height: 300px;
- width: 300px;
+ height: 250px;
+ width: 250px;
  border-radius: 0%;
- margin-top: 50px;
- margin-left: 50px;
+ margin-top: 200px;
+ margin-left: 500px;
  border:solid 5px #0f172a;
  
 }
 
 .homea2 {
- margin: 100px;
- padding-top: 50px;
- padding-bottom: 50px;
- background-color:#dbeafe;
- font-family:'Times New Roman';
- text-align: center;
- border-radius: 20px;
- font-weight:bolder;
+ width: 500px;
+ margin-left:300px;
  border:solid 3px rgb(11, 242, 107,0.3);
+ background-color:#dbeafe;
  
 }
 
 .home .homea{
- display: flex;
+ display:flex;
  justify-content: center;
  align-items: center;
  gap: 50px;
+ flex-direction: column;
  margin-top:75px;
 }
 .homeb1{
- margin: 100px;
+  width:450px;
+ margin-left:400px;
  padding-top: 50px;
- padding-bottom: 50px;
+ padding-bottom: 25px;
  font-family:'Times New Roman';
  text-align: center;
  border-radius: 20px;
@@ -109,28 +153,31 @@ image radius height width designing,flexing,button,hovering,smoooth,animation */
 
 }
 .homeb2{
- height:300px;
- width:300px;
+ height:250px;
+ width:250px;
  border-radius:0px 40px;
  border:solid 5px #0f172a;
+ padding-left:0px;
+ margin-left:0px;
  
 }
 .homeb{
  display:flex;
  justify-content:center;
  align-items:center;
+ flex-direction: column-reverse;
  gap:50px;
 
 }
 button{
  height:35px;
- width:80px;
+ width:100px;
  border-radius:25px;
  background-color:#1e3a8a;
  color:#ffffff;
  font-family: algerian;
 }
-button:hover{
+button:active{
  background-color: darkorange;
  font-size:20px;
  font-family: algerian;
@@ -168,70 +215,63 @@ button:hover{
  box-shadow: 2px 2px 3px 3px rgb(34, 136, 196,0.3);
 }
 .dataa1{
- margin-top:20px;
+ margin-top:50px;
  border-radius:40px 100px;
  border:solid 5px #0f172a;
  
 }
 .dataa2{
- margin-top:150px;
+ margin-top:10px;
  font-family:'Times New Roman';
  text-align: center;
+ word-spacing:5px;
  border-radius: 20px;
  text-indent: 100px;
  font-weight:bolder;
  background-color:#dbeafe;
  border:solid 3px rgb(11, 242, 10,0.3);
+ width:550px;
+ height:240px;
+ margin-left: 250px;
+ 
 
 }
 .about .data{
  display:flex;
  justify-content: center;
  align-items:center;
+ flex-direction:column;
  gap:100px;
 }
 /* content hover of pages */
-.home .homea2:hover{
+.home .homea2:active{
  
  animation-name:border-color;
  animation-duration:1s;
- animation-iteration-count:ease-in-out;
+ animation-iteration-count:linear;
  animation-fill-mode: forwards;
+ animation-timing-function:ease-in;
 }
 
-@keyframes border-color{
- from{
- transform:scale(1);
- }
- to{
- transform:scale(1);
- }
-}
 
 /* content hover of pages */
-.homeb .homeb1:hover{
+.homeb .homeb1:active{
  animation-name:border-color;
  animation-duration:1s;
- animation-iteration-count:ease-in-out;
+ animation-iteration-count:linear;
  animation-fill-mode: forwards;
+ animation-timing-function:ease-in;
 }
-@keyframes border-color{
- 
- from{
- transform:scale(1);
- }
- to{
- transform:scale(1);
- }
-}
+
 
 /* content hover of pages */
-.about .dataa2:hover{
+.about .dataa2:active{
 
  animation-name:border-color;
  animation-duration:1s;
- animation-iteration-count:ease-in-out;
+ animation-iteration-count:linear;
  animation-fill-mode: forwards;
+ animation-timing-function:ease-in;
 }
 @keyframes border-color{
  from{
@@ -239,7 +279,7 @@ button:hover{
  
  }
  to{
- transform: scale(1);
+ transform: scale(0.9);
  }
 }
  .about .aboutb{
@@ -503,21 +543,22 @@ box-shadow:2px 2px 3px 3px rgb(216, 124, 4,0.5);
  box-shadow: 2px 2px 3px 3px rgb(34, 136, 196,0.3);
 }
 .projectsa{
-width:500px;
+width:480px;
+
 background-color: whitesmoke;
 box-shadow:2px 2px 3px 4px black;
 margin-left:100px;
-padding:50px;
+padding:20px;
 border:solid 10px rgba(255, 225, 0, 0.3);
 border-radius:25px;
 
 }
 .experiencesa{
-width:500px;
+width:480px;
 background-color: whitesmoke;
 box-shadow:2px 2px 3px 4px black;
 margin-left:100px;
-padding:50px;
+padding:20px;
 border:solid 10px rgba(0, 255, 204, 0.3);
 border-radius:25px;
 
@@ -548,11 +589,11 @@ border-radius:25px;
  box-shadow: 2px 2px 3px 3px rgb(34, 136, 196,0.3);
 }
 .contactusa1{
-width:500px;
+width:480px;
 background-color: whitesmoke;
 box-shadow:2px 2px 3px 4px black;
 margin-left:100px;
-padding:50px;
+padding:20px;
 border:solid 10px rgba(11, 234, 111, 0.3);
 border-radius:25px;
 }
@@ -600,3 +641,4 @@ transform:scale(1.3);
 .copyrights{
 text-align: center;
 }
+   }
